# module-6-smmuja

./: .coverage  .gitignore  README.md  example-request.md  pyproject.toml
app/: __init__.py
app/controller/animal/: animal_route.py
app/controller/animal/schema/: update_animal.py
app/controller/employee/: employee_route.py
app/controller/employee/schema/: update_employee.py
app/models/: animal.py  employee.py
app/repositories/: animal_repo.py  employee_repo.py
app/route/: animal_route.py  employee_route.py
app/service/: animal_service.py  employee_service.py
app/utils/: api_response.py
migrations/versions/: 090bcab47c3f_first_push_supabase.py  a621177e0aaf_fix_error_type.py
tests/: conftest.py
tests/controller/: test_animal_controller.py  test_employee_controller.py
tests/service/: test_animal_service.py  test_employee_service.py
tests/utils/: test_api_response.py
